- Fixed sales-tag missing color

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,10 @@ li {
 	background-color: #d863a1;
 }
 
+.sales-tag {
+	background-color: #b0c932;
+}
+
 #editorial {
 	background-color: #f29e33;
 }
